@@ -24,6 +24,10 @@ Maven2Builder
 ----------------------
 * Add new attribute "siteGoal" that are run after the normal "goal", such as publishing a site even if a test fails (CC-877). Submitted by Jene Jasper
 
+Mercurial
+----------------------
+* Fix bug when author name contains special XML characters (CC-879). Patch by Daniel Kullman
+
 StarTeam
 ----------------------
 * Fix problem building because of dependency on PluginRegistryTest by adding the main/test classes to the common.xml classpath (CC-878). Patch by DKelly
